k8s/service.yml
kind: Service
apiVersion: v1
metadata:
  name: hello-world
spec:
  selector:
    app: hello-world
  type: NodePort
  ports:
  - protocol: TCP
    nodePort: 32131
    port: 80
    targetPort: 8080
